// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Leaderboard will match snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <ul
          class="Navbar"
        >
          <li
            class="NavLeft"
          >
            <a
              class="NavLink Link"
              href="/"
            >
              Home
            </a>
          </li>
          <li
            class="NavLeft"
          >
            <a
              class="NavLink Link"
              href="/Leaderboard"
            >
              LeaderBoard
            </a>
          </li>
          <li
            class="NavLeft"
          >
            <a
              class="NavLink Link"
              href="/NewPoll"
            >
              New
            </a>
          </li>
          <li
            class="NavRight"
          >
            <a
              class="NavLink"
            >
              Logout
            </a>
          </li>
          <li
            class="NavRight NavLink"
          />
          <li
            class="NavRight"
          />
        </ul>
        <table
          class="Table table"
          data-testid="leaderboard"
        >
          <thead>
            <tr>
              <th>
                #
              </th>
              <th>
                Name
              </th>
              <th>
                Questions
              </th>
              <th>
                Answers
              </th>
            </tr>
          </thead>
          <tbody />
        </table>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <ul
        class="Navbar"
      >
        <li
          class="NavLeft"
        >
          <a
            class="NavLink Link"
            href="/"
          >
            Home
          </a>
        </li>
        <li
          class="NavLeft"
        >
          <a
            class="NavLink Link"
            href="/Leaderboard"
          >
            LeaderBoard
          </a>
        </li>
        <li
          class="NavLeft"
        >
          <a
            class="NavLink Link"
            href="/NewPoll"
          >
            New
          </a>
        </li>
        <li
          class="NavRight"
        >
          <a
            class="NavLink"
          >
            Logout
          </a>
        </li>
        <li
          class="NavRight NavLink"
        />
        <li
          class="NavRight"
        />
      </ul>
      <table
        class="Table table"
        data-testid="leaderboard"
      >
        <thead>
          <tr>
            <th>
              #
            </th>
            <th>
              Name
            </th>
            <th>
              Questions
            </th>
            <th>
              Answers
            </th>
          </tr>
        </thead>
        <tbody />
      </table>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`LogInPage will match snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <form
        class="LogIn"
      >
        <h1>
          Select the user:
        </h1>
        <select
          class="LoginForm"
          data-testid="selectUser"
        >
          <option
            disabled=""
            value="none"
          >
            Select...
          </option>
        </select>
        <input
          class="LoginForm"
          data-testid="password"
          placeholder="password"
          required=""
          type="password"
        />
        <button
          class="LoginForm"
          disabled=""
        >
          Submit
        </button>
      </form>
    </div>
  </body>,
  "container": <div>
    <form
      class="LogIn"
    >
      <h1>
        Select the user:
      </h1>
      <select
        class="LoginForm"
        data-testid="selectUser"
      >
        <option
          disabled=""
          value="none"
        >
          Select...
        </option>
      </select>
      <input
        class="LoginForm"
        data-testid="password"
        placeholder="password"
        required=""
        type="password"
      />
      <button
        class="LoginForm"
        disabled=""
      >
        Submit
      </button>
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
